Added an AND gate.

--- a/Logicim/src/net/logicim/test/Todo.txt
+++ b/Logicim/src/net/logicim/test/Todo.txt
@@ -1,6 +1,10 @@
-IC hover draw
+error handling on shorts
 selection
 trace deleted event
 overlap trace placement
 Cache Stroke sizes in ... something
 Zoom to mouse position
+AND Gate
+NAND Gate
+NOR Gate
+XOR Gate
