Added anXOR gate.

--- a/Logicim/src/net/logicim/test/Todo.txt
+++ b/Logicim/src/net/logicim/test/Todo.txt
@@ -4,6 +4,5 @@ trace deleted event
 overlap trace placement
 Cache Stroke sizes in ... something
 Zoom to mouse position
-NAND Gate
-NOR Gate
 XOR Gate
+Buffer
