Only process input events in the main loop.

--- a/Logicim/src/net/logicim/test/Todo.txt
+++ b/Logicim/src/net/logicim/test/Todo.txt
@@ -2,8 +2,7 @@ VALIDATE CONSISTENCY OF VIEWS
 
 error handling on shorts
 selection
-trace deleted event
-overlap trace placement
+trace deleted event / connection made event
 Cache Stroke sizes in ... something
 Zoom to mouse position
 Loading/Saving/Undo
