Updated todo list.

--- a/Logicim/src/net/logicim/test/Todo.txt
+++ b/Logicim/src/net/logicim/test/Todo.txt
@@ -1,3 +1,9 @@
 Selection
 Undo
+Remove left panel.
+Property edit dialogs
+Fat buses
+Move existing component
+Rotate existing component
 
+Investigate why placing a component causes discontinuities
