Fixed deleting traces creating new traces.

--- a/Logicim/src/net/logicim/test/Todo.txt
+++ b/Logicim/src/net/logicim/test/Todo.txt
@@ -1,7 +1,7 @@
-Selection
 Undo
 Fat buses
-Move existing component
 Rotate existing component
 Change logic gate
-
+Connect wires on move / rotate
+W65C816S
+74LVC4245
