Re-select component if properties change.

--- a/Logicim/src/net/logicim/test/Todo.txt
+++ b/Logicim/src/net/logicim/test/Todo.txt
@@ -1,9 +1,7 @@
-Reselect component after edit
-Add to / remove from selection.
-Undo
 Fat buses
 Rotate existing component
 Change logic gate
+Draw logic gate ports
 Connect wires on move / rotate
 W65C816S
 74LVC4245
