Clamp property values to reasonable values.

--- a/Logicim/src/net/logicim/test/Todo.txt
+++ b/Logicim/src/net/logicim/test/Todo.txt
@@ -3,5 +3,6 @@ Rotate existing component
 Change logic gate
 Draw logic gate ports
 Connect wires on move / rotate
+Implicit power ports
 W65C816S
 74LVC4245
