Removed all text alignment.  Only centered makes sense in terms of rotations.

--- a/Logicim/src/net/logicim/test/Todo.txt
+++ b/Logicim/src/net/logicim/test/Todo.txt
@@ -1,6 +1,8 @@
 Splitter out view
-Drive strength / pull resistors
 Rotate existing component
+Drive strength / pull resistors
+Enum properties editor
+Rotation in properties editor
 Change logic gate
 Draw logic gate ports
 Connect wires on move / rotate
