Added rotation properties to the ReflectivePropertiesPanel.

--- a/Logicim/src/net/logicim/test/Todo.txt
+++ b/Logicim/src/net/logicim/test/Todo.txt
@@ -1,4 +1,6 @@
 Splitter out view
+Fix connection to only use new style
+Fix 'load' to only update connections once placement is complete.
 Rotate existing component
 Drive strength / pull resistors
 Enum properties editor
