--- a/Logicim/src/net/logicim/test/Todo.txt
+++ b/Logicim/src/net/logicim/test/Todo.txt
@@ -1,10 +1,11 @@
 Splitter out view
+Properties editor escape and apply shortcuts
+Cache rotated fonts
+Fix keyboard modifiers after dialog
 Fix connection to only use new style
-Fix 'load' to only update connections once placement is complete.
+Fix 'load' to only update connections once placement is complete
 Rotate existing component
 Drive strength / pull resistors
-Enum properties editor
-Rotation in properties editor
 Change logic gate
 Draw logic gate ports
 Connect wires on move / rotate
