Fixed editor keys not responding after dialog opened.

--- a/Logicim/src/net/logicim/test/Todo.txt
+++ b/Logicim/src/net/logicim/test/Todo.txt
@@ -2,6 +2,8 @@ Fix keyboard modifiers after dialog
 Fix connection to only use new style
 Fix 'load' to only update connections once placement is complete
 Rotate existing component
+Add tunnels
+
 Drive strength / pull resistors
 Change logic gate
 Draw logic gate ports
