Fixed editing of non-IC properties.

--- a/Logicim/src/net/logicim/test/Todo.txt
+++ b/Logicim/src/net/logicim/test/Todo.txt
@@ -2,6 +2,7 @@ Fix connection to only use new style
 Fix 'load' to only update connections once placement is complete
 Rotate existing component
 Add tunnels
+Fix editor dialogs not appearing after selection
 
 Drive strength / pull resistors
 Change logic gate
