Stop deleted traces from null pointering when being deleted again.

--- a/Logicim/src/net/logicim/test/Todo.txt
+++ b/Logicim/src/net/logicim/test/Todo.txt
@@ -3,6 +3,8 @@ Fix 'load' to only update connections once placement is complete
 Rotate existing component
 Add tunnels
 Fix editor dialogs not appearing after selection
+Click on select component must be meaningful
+Fix delete trace getting carried away
 
 Drive strength / pull resistors
 Change logic gate
