--- a/Logicim/src/net/logicim/test/Todo.txt
+++ b/Logicim/src/net/logicim/test/Todo.txt
@@ -1,6 +1,7 @@
 Rotate existing component
 Add tunnels
 Click on select component must be meaningful
+Fix connecting different width traces together.
 
 Drive strength / pull resistors
 Change logic gate
