Fixed removed trace views being finalised after a move.

--- a/Logicim/src/net/logicim/test/Todo.txt
+++ b/Logicim/src/net/logicim/test/Todo.txt
@@ -1,7 +1,7 @@
 Rotate existing component
 Add tunnels
 Click on select component must be meaningful
-Fix connecting different width traces together.
+Fix connecting different width traces together
 
 Drive strength / pull resistors
 Change logic gate
@@ -10,3 +10,4 @@ Connect wires on move / rotate
 Implicit power ports
 W65C816S
 74LVC4245
+SRAM
