Components kind-of sort-of rotate.

--- a/Logicim/src/net/logicim/test/Todo.txt
+++ b/Logicim/src/net/logicim/test/Todo.txt
@@ -4,8 +4,7 @@ Fix connecting different width traces together
 
 Drive strength / pull resistors
 Change logic gate
-Draw logic gate ports
-Connect wires on move / rotate
+Draw wide logic gates
 Implicit power ports
 W65C816S
 74LVC4245
