Fixed Logic Gates not being selectable.

--- a/Logicim/src/net/logicim/test/Todo.txt
+++ b/Logicim/src/net/logicim/test/Todo.txt
@@ -1,6 +1,6 @@
 Add tunnels
-Fix connecting different width traces together
 
+Drag wires on move
 Drive strength / pull resistors
 Change logic gate
 Draw wide logic gates
