Calculate tunnel and label size on creation rather than on first paint.

--- a/Logicim/src/net/logicim/test/Todo.txt
+++ b/Logicim/src/net/logicim/test/Todo.txt
@@ -1,10 +1,14 @@
 Add tunnels
+Draw wide logic gates
 
 Drag wires on move
+Optimise componentView finding
 Drive strength / pull resistors
 Change logic gate
-Draw wide logic gates
 Implicit power ports
 W65C816S
 74LVC4245
 SRAM
+
+Sub-circuits
+Sub-views
