Remove TunnelView maps if empty.

--- a/Logicim/src/net/logicim/test/Todo.txt
+++ b/Logicim/src/net/logicim/test/Todo.txt
@@ -1,5 +1,6 @@
 Add tunnels
 Draw wide logic gates
+Fix rotations not notifying components they've been rotated
 
 Drag wires on move
 Optimise componentView finding
