Rewriting circuit disconnection to be much simpler.

--- a/Logicim/src/net/logicim/test/Todo.txt
+++ b/Logicim/src/net/logicim/test/Todo.txt
@@ -1,6 +1,6 @@
-Add tunnels
 Draw wide logic gates
 Fix rotations not notifying components they've been rotated
+Component view caching and validating
 
 Drag wires on move
 Optimise componentView finding
