--- a/Logicim/src/net/logicim/test/Todo.txt
+++ b/Logicim/src/net/logicim/test/Todo.txt
@@ -1,6 +1,7 @@
 Draw wide logic gates
 Fix rotations not notifying components they've been rotated
-Component view caching and validating
+Splitter views don't connect to traces when placed.
+Tunnel views don't connect to traces when placed.
 
 Drag wires on move
 Optimise componentView finding
