Added power ports to pins.

--- a/Logicim/src/net/logicim/test/Todo.txt
+++ b/Logicim/src/net/logicim/test/Todo.txt
@@ -1,13 +1,12 @@
-Splitter order doesn't work
+Power ports don't update with edit
 Power ports on PinView
 
+Implicit power ports
 Drag wires on move
 Drive strength / pull resistors
 Change logic gate
-Implicit power ports
 W65C816S
 74LVC4245
 SRAM
 
 Sub-circuits
-Sub-views
