Fixed deleted traces not reconnecting immediate connected components.

--- a/Logicim/src/net/logicim/test/Todo.txt
+++ b/Logicim/src/net/logicim/test/Todo.txt
@@ -1,7 +1,9 @@
-Power ports don't update with edit
-Power ports on PinView
+Deleting wire doesn't notify pins
 
 Implicit power ports
+Constants
+Probes
+Editable Pins
 Drag wires on move
 Drive strength / pull resistors
 Change logic gate
