Text is included in bounding box calculations.

--- a/Logicim/src/net/logicim/test/Todo.txt
+++ b/Logicim/src/net/logicim/test/Todo.txt
@@ -1,9 +1,7 @@
-Deleting wire doesn't notify pins
-
 Implicit power ports
 Constants
 Probes
-Editable Pins
+Pin outputs forced editable
 Drag wires on move
 Drive strength / pull resistors
 Change logic gate
