Moved auto pin numbering to pin done placement.

--- a/Logicim/src/net/logicim/test/Todo.txt
+++ b/Logicim/src/net/logicim/test/Todo.txt
@@ -1,4 +1,10 @@
-Pin numbering and naming
+Pin numbering on paste
+Pin weight increase on next pin
+Update views on pin change
+Default editor properties from last
+Subcircuit bubbles and lines
+Create and connect subcircuit components
+
 User error messages
 Constants
 Probes
@@ -9,5 +15,3 @@ Change logic gate
 W65C816S
 74LVC4245
 SRAM
-
-Sub-circuits
