Recreating subcircuits is wrong.

--- a/Logicim/src/net/logicim/test/Todo.txt
+++ b/Logicim/src/net/logicim/test/Todo.txt
@@ -1,12 +1,14 @@
-Create and connect subcircuit components
-
+Goto last simulation in subcircuit
+Flip component
+Fix pin direction
+Fix clock rotation
 User error messages
 Constants
 Probes
 Pin outputs forced editable
-Drag wires on move
 Drive strength / pull resistors
 Change logic gate
 W65C816S
 74LVC4245
 SRAM
+Drag wires on move
