Updated todo list.

--- a/Logicim/src/net/logicim/test/Todo.txt
+++ b/Logicim/src/net/logicim/test/Todo.txt
@@ -1,4 +1,7 @@
 Goto last simulation in subcircuit
+Two identical traces in a bus show as a single trace
+Update subcircuit view pins should cause subcircuit instances to be recreated
+Traces must connect out through pins
 Pin outputs forced editable
 Flip component
 User error messages
