Updated todo list.

--- a/Logicim/src/net/logicim/test/Todo.txt
+++ b/Logicim/src/net/logicim/test/Todo.txt
@@ -4,6 +4,7 @@ Update subcircuit view pins should cause subcircuit instances to be recreated
 Traces must connect out through pins
 Pin outputs forced editable
 Flip component
+Better pin anchour tools
 User error messages
 Constants
 Probes
