Remember the last subcircuit simulation visited.

--- a/Logicim/src/net/logicim/test/Todo.txt
+++ b/Logicim/src/net/logicim/test/Todo.txt
@@ -1,4 +1,5 @@
-Goto last simulation in subcircuit
+Double click enter circuit
+Double click edit properties
 Two identical traces in a bus show as a single trace
 Update subcircuit view pins should cause subcircuit instances to be recreated
 Traces must connect out through pins
