Added a subcircuit editor list panel.

--- a/Logicim/src/net/logicim/test/Todo.txt
+++ b/Logicim/src/net/logicim/test/Todo.txt
@@ -1,5 +1,7 @@
 Double click enter circuit
 Double click edit properties
+Mouse move during click must discard double click
+Keyboard shortcuts requiring the edit window must not work when not in the window
 Two identical traces in a bus show as a single trace
 Update subcircuit view pins should cause subcircuit instances to be recreated
 Traces must connect out through pins
