--- a/Logicim/src/net/logicim/test/Todo.txt
+++ b/Logicim/src/net/logicim/test/Todo.txt
@@ -1,3 +1,4 @@
+Validate the connection view cache contains all and only View connections.
 Mouse move during click must discard double click
 Keyboard shortcuts requiring the edit window must not work when not in the window
 Two identical traces in a bus show as a single trace
